// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Structure/ino-list-item Activated smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-list-item">
    <ino-list two-lines="false"
              class="hydrated"
    >
      <ul class="mdc-deprecated-list">
        <ino-list-item secondary-text
                       selected="false"
                       activated="true"
                       disabled="false"
                       text="List item"
                       class="hydrated"
        >
          <li class="mdc-deprecated-list-item mdc-deprecated-list-item--activated mdc-ripple-upgraded"
              tabindex="-1"
          >
            <span class="mdc-deprecated-list-item__ripple">
            </span>
            <span class="mdc-deprecated-list-item__text">
              List item
            </span>
          </li>
        </ino-list-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-list-item Disabled smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-list-item">
    <ino-list two-lines="false"
              class="hydrated"
    >
      <ul class="mdc-deprecated-list">
        <ino-list-item secondary-text
                       selected="false"
                       activated="false"
                       disabled="true"
                       text="List item"
                       class="hydrated"
        >
          <li class="mdc-deprecated-list-item mdc-deprecated-list-item--disabled mdc-ripple-upgraded"
              tabindex="-1"
          >
            <span class="mdc-deprecated-list-item__ripple">
            </span>
            <span class="mdc-deprecated-list-item__text">
              List item
            </span>
          </li>
        </ino-list-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-list-item Graphics smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-list-item">
    <ino-list class="hydrated">
      <ul class="mdc-deprecated-list">
        <ino-list-item text="Lorem ipsum dolor sit"
                       class="hydrated"
        >
          <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
              tabindex="-1"
          >
            <span class="mdc-deprecated-list-item__ripple">
            </span>
            <span class="mdc-deprecated-list-item__graphic"
                  role="presentation"
            >
              <ino-img slot="leading"
                       src="https://cdn-images-1.medium.com/max/1600/1*HP8l7LMMt7Sh5UoO1T-yLQ.png"
                       ratio-width="1"
                       ratio-height="1"
                       class="hydrated"
              >
                <div class="ino-img__composer"
                     style="padding-top: 100%;"
                >
                  <img class="ino-img__image"
                       src="https://cdn-images-1.medium.com/max/1600/1*HP8l7LMMt7Sh5UoO1T-yLQ.png"
                  >
                  <div class="ino-img__fallback-icon">
                    <ino-icon class="hydrated ino-icon--color-scheme-primary">
                    </ino-icon>
                  </div>
                </div>
              </ino-img>
            </span>
            <span class="mdc-deprecated-list-item__text">
              Lorem ipsum dolor sit
            </span>
          </li>
        </ino-list-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-list-item MetaData smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-list-item">
    <ino-list class="hydrated">
      <ul class="mdc-deprecated-list">
        <ino-list-item text="Lorem ipsum dolor sit"
                       class="hydrated"
        >
          <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
              tabindex="-1"
          >
            <span class="mdc-deprecated-list-item__ripple">
            </span>
            <span class="mdc-deprecated-list-item__text">
              Lorem ipsum dolor sit
            </span>
            <span class="mdc-deprecated-list-item__meta">
              <p slot="trailing">
                $10.00
              </p>
            </span>
          </li>
        </ino-list-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-list-item Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-list-item">
    <ino-list two-lines="false"
              class="hydrated"
    >
      <ul class="mdc-deprecated-list">
        <ino-list-item secondary-text
                       selected="false"
                       activated="false"
                       disabled="false"
                       text="List item"
                       class="hydrated"
        >
          <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
              tabindex="-1"
          >
            <span class="mdc-deprecated-list-item__ripple">
            </span>
            <span class="mdc-deprecated-list-item__text">
              List item
            </span>
          </li>
        </ino-list-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-list-item SecondaryText smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-list-item">
    <ino-list two-lines="true"
              class="hydrated"
    >
      <ul class="mdc-deprecated-list mdc-deprecated-list--two-line">
        <ino-list-item secondary-text="Second line text"
                       selected="false"
                       activated="false"
                       disabled="false"
                       text="List item"
                       class="hydrated"
        >
          <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
              tabindex="-1"
          >
            <span class="mdc-deprecated-list-item__ripple">
            </span>
            <span class="mdc-deprecated-list-item__text">
              <span class="mdc-deprecated-list-item__primary-text">
                List item
              </span>
              <span class="mdc-deprecated-list-item__secondary-text">
                Second line text
              </span>
            </span>
          </li>
        </ino-list-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-list-item Selected smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-list-item">
    <ino-list two-lines="false"
              class="hydrated"
    >
      <ul class="mdc-deprecated-list">
        <ino-list-item secondary-text
                       selected="true"
                       activated="false"
                       disabled="false"
                       text="List item"
                       class="hydrated"
        >
          <li class="mdc-deprecated-list-item mdc-deprecated-list-item--selected mdc-ripple-upgraded"
              tabindex="-1"
          >
            <span class="mdc-deprecated-list-item__ripple">
            </span>
            <span class="mdc-deprecated-list-item__text">
              List item
            </span>
          </li>
        </ino-list-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-list-item Text smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-list-item">
    <ino-list two-lines="false"
              class="hydrated"
    >
      <ul class="mdc-deprecated-list">
        <ino-list-item secondary-text
                       selected="false"
                       activated="false"
                       disabled="false"
                       text="simple-item"
                       class="hydrated"
        >
          <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
              tabindex="-1"
          >
            <span class="mdc-deprecated-list-item__ripple">
            </span>
            <span class="mdc-deprecated-list-item__text">
              simple-item
            </span>
          </li>
        </ino-list-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-list-item WithCheckbox smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-list-item">
    <ino-list class="hydrated">
      <ul class="mdc-deprecated-list">
        <ino-list-item text="Lorem ipsum dolor sit"
                       class="hydrated"
        >
          <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
              tabindex="-1"
          >
            <span class="mdc-deprecated-list-item__ripple">
            </span>
            <span class="mdc-deprecated-list-item__graphic"
                  role="presentation"
            >
              <ino-checkbox slot="leading"
                            class="hydrated"
              >
                <input type="hidden"
                       class="aux-input"
                       name="undefined"
                       value
                >
              </ino-checkbox>
            </span>
            <span class="mdc-deprecated-list-item__text">
              Lorem ipsum dolor sit
            </span>
          </li>
        </ino-list-item>
      </ul>
    </ino-list>
  </div>
</div>
`;

exports[`Structure/ino-list-item WithRadio smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-list-item">
    <ino-list class="hydrated">
      <ul class="mdc-deprecated-list">
        <ino-list-item text="Lorem ipsum dolor sit"
                       class="hydrated"
        >
          <li class="mdc-deprecated-list-item mdc-ripple-upgraded"
              tabindex="-1"
          >
            <span class="mdc-deprecated-list-item__ripple">
            </span>
            <span class="mdc-deprecated-list-item__graphic"
                  role="presentation"
            >
              <ino-radio slot="leading"
                         selection
                         class="hydrated"
              >
                <input type="hidden"
                       class="aux-input"
                       name="undefined"
                       value
                >
              </ino-radio>
            </span>
            <span class="mdc-deprecated-list-item__text">
              Lorem ipsum dolor sit
            </span>
          </li>
        </ino-list-item>
      </ul>
    </ino-list>
  </div>
</div>
`;
